# grubhub-dl

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: design.md  example-config.ini
grubhub_dl/: __init__.py  config.py  export.py  extract.py  main.py  process.py  validation.py
grubhub_dl/emails/: __init__.py  cache.py  gmail.py
grubhub_dl/export/: export.py
grubhub_dl/export/schemas/: sqlite.sql
grubhub_dl/extractors/: __init__.py  cancellations.py  credits.py  orders.py  updates.py
grubhub_dl/models/: __init__.py  grubhub.py  params.py
tools/: email_bodies_to_html_files.py  explore_email_bodies.py  schema_from_model.py
